benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-safe014_power.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe014_power.oepc.yml/safe014_power.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe014_power.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_5vmay5fn/tmp/tmp0fsv9gcv.c
Compilation started
/tmp/BenchExec_run_5vmay5fn/tmp/tmp0fsv9gcv.c: In function ‘P0’:
/tmp/BenchExec_run_5vmay5fn/tmp/tmp0fsv9gcv.c:581:19: error: ‘FALSE’ undeclared (first use in this function)
  581 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_5vmay5fn/tmp/tmp0fsv9gcv.c:581:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_5vmay5fn/tmp/tmp0fsv9gcv.c: In function ‘main’:
/tmp/BenchExec_run_5vmay5fn/tmp/tmp0fsv9gcv.c:695:19: error: ‘TRUE’ undeclared (first use in this function)
  695 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
